--- a/Challenge01/style.css
+++ b/Challenge01/style.css
@@ -26,9 +26,10 @@ body {
   color: white;
 
   width: 80%;
+  max-width: 1024px;
   margin: 0 auto;
 
-  padding: 2em 5em;
+  padding: 3em;
 }
 
 .intro-content {
